Add LSP to rust emacs
Signed-off-by: Petr Horáček <phoracek@redhat.com>

--- a/emacs/config.el.j2
+++ b/emacs/config.el.j2
@@ -54,3 +54,7 @@
 
 (after! deft
   (setq deft-directory "~/org"))
+
+(after! company
+  (setq company-idle-delay 0
+        company-minimum-prefix-length 0))
